--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
 
     <!-- BOOTSTRAP SCRIPT -->
     <script src="cdn.jsdelivr.net" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        const toggleButton = document.querySelector('.mobile-toggle');
+        const navLeft = document.querySelector('.nav-left');
+        const navRight = document.querySelector('.nav-right');
+
+        toggleButton.addEventListener('click', () => {
+            navLeft.classList.toggle('active');
+            navRight.classList.toggle('active');
+});
+</script>
 </body>
 </html>
